fixed terminal styling and overflows

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -4,7 +4,11 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-simple-sidebar/blob/master/LICENSE)
  */
 
-
+.termynal-output {
+  /* enable div scrolling */
+  overflow: auto;
+  height:400px;
+}
 .alert-success {
   width: 40%;
 }
