--- a/app/static/styles/termynal.css
+++ b/app/static/styles/termynal.css
@@ -15,7 +15,7 @@
 [data-termynal] {
     width: 750px;
     max-width: 100%;
-    min-height:100%;
+    min-height: 300px;
     background: var(--color-bg);
     color: var(--color-text);
     font-size: 18px;
